@@ -9,13 +9,40 @@
 	<artifactId>loadui-groovy-component-pack</artifactId>
 	<name>loadUI Groovy Component Pack</name>
 	<description>An archive of the included groovy component files.</description>
-	<build>
+
+    <profiles>
+        <profile>
+            <id>int-tests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>2.14.1</version>
+                        <configuration>
+                            <groups>com.eviware.loadui.test.categories.IntegrationTest</groups>
+                            <argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=128M</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
+    <build>
 		<resources>
 			<resource>
 				<directory>${project.basedir}/src/main/groovy</directory>
 			</resource>
 		</resources>
 		<plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14.1</version>
+                <configuration>
+                    <excludedGroups>com.eviware.loadui.test.categories.IntegrationTest</excludedGroups>
+                </configuration>
+            </plugin>
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<version>1.7</version>
