@@ -10,8 +10,35 @@
 	<packaging>bundle</packaging>
 	<name>loadUI Groovy Utils</name>
 	<description>Support classes for creating Groovy DSLs</description>
+
+    <profiles>
+        <profile>
+            <id>int-tests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>2.14.1</version>
+                        <configuration>
+                            <groups>com.eviware.loadui.test.categories.IntegrationTest</groups>
+                            <argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=128M</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 	<build>
 		<plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14.1</version>
+                <configuration>
+                    <excludedGroups>com.eviware.loadui.test.categories.IntegrationTest</excludedGroups>
+                </configuration>
+            </plugin>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
@@ -53,5 +80,13 @@
 			<artifactId>com.springsource.org.apache.ivy</artifactId>
 			<version>2.2.0</version>
 		</dependency>
+
+        <dependency>
+            <groupId>com.eviware.loadui</groupId>
+            <artifactId>loadui-test-utils</artifactId>
+            <version>${project.parent.version}</version>
+            <scope>test</scope>
+        </dependency>
+
 	</dependencies>
 </project>
